day04/dov-bear/k8s/base/dov-bear.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-deploy
  namespace: dovns
  labels:
    app: dov
    dept: eng
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dov
      dept: eng
  template:
    metadata:
      labels:
        app: dov
        dept: eng
    spec:
      containers:
        - name: dov-container
          image: chukmunnlee/dov-bear:v5 # TODO: Use hash instead of tag
          imagePullPolicy: IfNotPresent # Always if tag is latest
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: dov-svc
  namespace: dovns
  labels:
    app: dov
    dept: eng
spec:
  type: NodePort
  selector:
    app: dov
    dept: eng
  ports:
    - port: 8080 # Service port
      protocol: TCP
      targetPort: 3000 # Container port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dov-ing
  namespace: dovns
  labels:
    app: dov
    name: dov-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: dov-139.59.219.226.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix # Other options are: Exact, ImplementationSpecific
            backend:
              service:
                name: dov-svc
                port:
                  number: 8080
